# jeck

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Makefile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_create_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: actions.py  artifacts.py  audit.py  executor.py  messages.py  projects.py  router.py  threads.py
backend/app/core/: env.py
backend/app/db/: models.py  session.py
backend/app/schemas/: __init__.py  actions.py  artifacts.py  audit.py  audit.ру  executor.py  messages.py  projects.py  threads.py
backend/app/services/: actions.py  artifacts.py  audit.py  executor.py  executor_contract.py
backend/app/services/executors/: stub_echo.py
backend/app/tests/: git apply <<'EOF'.py  test_actions_idempotent_approve.py  test_actions_idempotent_create.py  test_api_crud.py  test_artifacts_api.py  test_artifacts_service.py  test_audit_api.py  test_executor_dispatch.py  test_executor_handlers_api.py  test_executor_stub.py  test_guardrails_and_audit.py  test_repo_sanity.py  test_smoke_db.py
