[tool.poetry]
name = "jack-backend"
version = "0.1.0"
description = "Backend for the Jack assistant"
authors = ["Jack Team <team@example.com>"]
readme = "../README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
psycopg = { version = "^3.2.1", extras = ["binary"] }
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"
ruff = "^0.14.13"
mypy = "^1.19.1"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["app/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
